--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,6 @@
-0.3.0 - June 11, 2011
+0.3.2 - August 4, 2011
+  * Fixing bug where a server was launched multiple times (thanks aaronjenson and daniel-g)
+0.3.1 - June 11, 2011
   * Renaming SunspotTestHelper to SunspotTest (thanks ersatzryan)
   * Enabling testing within rspec specs
 0.2.0 - May 26, 2011
