Added support for sunspot_test/test_unit.

--- a/README.rdoc
+++ b/README.rdoc
@@ -49,6 +49,22 @@ Then within your specs, you'll need to tag and explicitly commit changes to solr
     end
   end
 
+== Can it do TestUnit?
+
+Same as RSpec.
+
+In test_helper.rb
+
+  require 'sunspot_test/test_unit'
+
+Then within your test, you'll need to tag and explicitly commit changes to solr:
+
+  test 'searching' do
+    book = Factory(:book, :title => "Of Mice and Men")
+    Sunspot.commit
+    assert_equal [book], Book.search { keywords "mice"}.results
+  end
+
 == Configuring the timeout
 
 The test suite will try and launch a solr process and wait for 15 seconds for the process to launch. You can configure this timeout by setting the following in env.rb:
