--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,6 @@
+0.4.0 - September 13, 2011
+  * Added support for Test::Unit (thanks ordinaryzelig)
+  * Fix to use an existing server (thanks mattscilipoti)
 0.3.2 - August 4, 2011
   * Fixing bug where a server was launched multiple times (thanks aaronjenson and daniel-g)
 0.3.1 - June 11, 2011
